SGCL 2026: a concurrent, generational, pause-free collector
The library rewritten around one word per pointer: a tracked_ptr is
the address and a write barrier of a byte of state, with no reference
count, no control block and no external-heap mode. The collector is a
concurrent, non-moving, generational mark-and-sweep with a Dijkstra
insertion barrier; no thread ever stops, reaches a safepoint or waits
for a cycle. What is new against the previous public version:

- States with the parity of the epoch: a cycle begins with one atomic
  store that retires every state the barrier set before it.
- Generational cycles by default (sticky marks, cards in a byte table
  over the address space); -DSGCL_GENERATIONAL=0 for full cycles only.
- Marking, registration, sweeping and the rebuild of free bitmaps on a
  pool of helpers, switched on only while the collector is behind.
- The stack scan on vectors (NEON, SSE4.2); objects initialized before
  publication; thread registration before the first store.
- weak_ptr (one word, cleared by the cycle that finds the object
  unreachable), expiry_queue (a callback with the object alive again),
  coroutines on the managed heap (managed_frame, frame_ptr, task,
  generator), atomic and atomic_ref on tracked_ptr.
- The containers of std over managed nodes and buffers: vector, array,
  deque, list, forward_list, stack, queue, priority_queue, map,
  multimap, set, multiset and the four unordered ones, with node
  handles, transparent lookup, erase_if and deduction guides.
- Diagnostics: cycle counters and phase times, live objects and bytes
  by type, a committed-memory ceiling with bad_alloc past it.
- A reference page per public class in docs/, every example compiled;
  benchmarks against unique_ptr, shared_ptr, Go and Java ZGC in one
  script, benchmarks/compare.sh.

Fixes reported against the previous version: the page header released
with a delete of the wrong size (issue #12), the pointer map of a type
built on first use so that a gl